--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
 todo: 
 -perft:
-	history-> ply is growing to much probably because were passing references and not resseting 
-	problem is that the ply isn't representing the actual length of the history arr. when it's it's a length of 256 the history->ply says 32759
+	implement castling as a move ( if not already possible) 
+	perft is accurate up until depth 5 for rn figure out why 
