--- a/TODO.txt
+++ b/TODO.txt
@@ -1,39 +1,6 @@
 todo: 
 -perft: 
 
-When a rook is moved, they disappear from the board in this test : 
-
-position fen r3k2r/p1ppqpb1/bn2pnp1/3PN3/1p2P3/2N2Q1p/PPPBBPPP/R3K2R w KQkq -
-d
-8| r . . . k . . r 
-7| p . p p q p b .
-6| b n . . p n p .
-5| . . . P N . . .
-4| . p . . P . . .
-3| . . N . . Q . p
-2| P P P B B P P P
-1| R . . . K . . R
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Fen: r3k2r/p1ppqpb1/bn2pnp1/3PN3/1p2P3/2N2Q1p/PPPBBPPP/R3K2R w KQkq - 0 1     
-go perft 6
-Error: Invalid piece at from=0
-Moves to get to this position:
-Move 0: a2a3
-Move 1: b4a3
-Move 2: g2g3
-Move 3: a3b2
-Move 4: a1b1
-Current Board:
-8| r . . . k . . r
-7| p . p p q p b .
-6| b n . . p n p .
-5| . . . P N . . .
-4| . . . . P . . .
-3| . . P . . Q P p
-2| P p P B B P . P
-1| . . . . K . . R
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-
-running it back organically from the starting position doesn't yield an error so it may be that the rook's placements are getting corrupted somewhere 
+Comb through everything move related to make sure each piece movement is going the way it should 
+	**create an inline function when a piece to be moved from place to place 
+	*use ands instead of xors since they might be weird in some cases. 
