--- a/TODO.txt
+++ b/TODO.txt
@@ -73,6 +73,94 @@ d
 1| R N B Q K B N R
    _ _ _ _ _ _ _ _
    a b c d e f g h
+White Pieces
+8| . . . . . . . .
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| 1 1 1 1 1 1 1 1
+1| 1 1 1 1 1 1 1 1
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Black Pieces
+8| 1 1 1 1 1 1 1 1
+7| 1 1 1 1 1 1 1 1
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| . . . . . . . .
+1| . . . . . . . .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Pawns
+8| . . . . . . . .
+7| 1 1 1 1 1 1 1 1
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| 1 1 1 1 1 1 1 1
+1| . . . . . . . .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Knights
+8| . 1 . . . . 1 .
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| . . . . . . . .
+1| . 1 . . . . 1 .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Bishops
+8| . . 1 . . 1 . .
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| . . . . . . . .
+1| . . 1 . . 1 . .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Rooks
+8| 1 . . . . . . 1
+7| . . . . . . . . 
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| . . . . . . . .
+1| 1 . . . . . . 1
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Queens
+8| . . . 1 . . . .
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| . . . . . . . .
+1| . . . 1 . . . .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Kings
+8| . . . . 1 . . .
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| . . . . . . . .
+1| . . . . 1 . . .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
 Fen: rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1
 go perft 1
 a2a3: 1
@@ -109,4 +197,100 @@ d
 1| R N B Q K B N R
    _ _ _ _ _ _ _ _
    a b c d e f g h
+White Pieces
+8| . . . . . . . .
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| 1 1 1 1 1 1 1 1
+3| 1 1 1 1 1 1 1 1
+2| 1 1 1 1 1 1 1 1
+1| 1 1 1 1 1 1 1 1
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Black Pieces
+8| 1 1 1 1 1 1 1 1
+7| 1 1 1 1 1 1 1 1
+6| . . . . . . . .
+5| . . . . . . . .
+4| 1 1 1 1 1 1 1 1
+3| 1 1 1 1 1 1 1 1
+2| . . . . . . . .
+1| . . . . . . . .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Pawns
+8| . . . . . . . .
+7| 1 1 1 1 1 1 1 1
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| 1 1 1 1 1 1 1 1
+1| . . . . . . . .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Knights
+8| . 1 . . . . 1 .
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . . 
+2| . . . . . . . .
+1| . 1 . . . . 1 .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Bishops
+8| . . 1 . . 1 . .
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| . . . . . . . .
+1| . . 1 . . 1 . .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Rooks
+8| 1 . . . . . . 1
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| . . . . . . . .
+1| 1 . . . . . . 1
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Queens
+8| . . . 1 . . . .
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| . . . . . . . .
+1| . . . 1 . . . .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
+Kings
+8| . . . . 1 . . .
+7| . . . . . . . .
+6| . . . . . . . .
+5| . . . . . . . .
+4| . . . . . . . .
+3| . . . . . . . .
+2| . . . . . . . .
+1| . . . . 1 . . .
+   _ _ _ _ _ _ _ _
+   a b c d e f g h
 Fen: rnbqkbnr/pppppppp/8/8/XXXXXXXX/XXXXXXXX/PPPPPPPP/RNBQKBNR w KQkq - 0 1
+
+empty pieces are determined by ~getAllPieces and my current place piece and remove Piece agenda places piece in both nWhite and nBlack sides 
+It works correctly for the piece's sides tho 
+
+** what this tells me is that regular moves have residue, and don't get cleaned up correctly 
+
+I KNOW WHAT'S HAPPENING: 
+if captured piece is empty (0), it's still accessing it's board->pieces[piece] bitboard (white sides bitboard), this is causing extra ghost pieces 
