--- a/TODO.txt
+++ b/TODO.txt
@@ -1,296 +1,3 @@
-todo: 
--perft: 
-	to make the make and umake move functions simpler i am going to redo them from scratch to make sure that everything is taken care of cleanly.
-	** if still having trouble after this, check out movegeneration, might be generating illegal moves 
-	** also make sure the board initialization is working properly, print out all the piece bitboard and mailbox to make sure everyting is gucci. 
-	** also 
-
-**for some reason, the moves that are being generated in a depth of 2 is the pawn attacks? 
-
-Board unmake may have a bug in it that doesn't reset the board fully, caliing go perft 1 twice in a row results in different answers ** bad 
-Since this is occuring at very low depth this prolly is because unmakeMove isn't setting back state properly:
-
-Initializing magic bitboard lookup tables...
-Magic bitboard initialization complete!
-go perft 1
-a2a3: 1
-a2a4: 1
-b2b3: 1
-b2b4: 1
-c2c3: 1
-c2c4: 1
-d2d3: 1
-d2d4: 1
-e2e3: 1
-e2e4: 1
-f2f3: 1
-f2f4: 1
-g2g3: 1
-g2g4: 1
-h2h3: 1
-h2h4: 1
-b1a3: 1
-b1c3: 1
-g1f3: 1
-g1h3: 1
-
-Nodes searched: 20
-Nodes Per Second: 4000
-go perft 1
-a2b3: 1
-b2a3: 1
-b2c3: 1
-c2b3: 1
-c2d3: 1
-d2c3: 1
-d2e3: 1
-e2d3: 1
-e2f3: 1
-f2e3: 1
-f2g3: 1
-g2f3: 1
-g2h3: 1
-h2g3: 1
-b1a3: 1
-b1c3: 1
-g1f3: 1
-g1h3: 1
-Nodes searched: 18
+-all current test suites pass except kiwipete 6, if this continues to be an issue will check in with other test positions 
 
 
-**FOUND THE BUG: 
-- Using nWhite to represent empty squares causes X's to be left when removed, will investigate this phenomenon further 
-Initializing magic bitboard lookup tables...
-Magic bitboard initialization complete!
-d
-8| r n b q k b n r 
-7| p p p p p p p p
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| P P P P P P P P
-1| R N B Q K B N R
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-White Pieces
-8| . . . . . . . .
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| 1 1 1 1 1 1 1 1
-1| 1 1 1 1 1 1 1 1
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Black Pieces
-8| 1 1 1 1 1 1 1 1
-7| 1 1 1 1 1 1 1 1
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| . . . . . . . .
-1| . . . . . . . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Pawns
-8| . . . . . . . .
-7| 1 1 1 1 1 1 1 1
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| 1 1 1 1 1 1 1 1
-1| . . . . . . . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Knights
-8| . 1 . . . . 1 .
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| . . . . . . . .
-1| . 1 . . . . 1 .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Bishops
-8| . . 1 . . 1 . .
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| . . . . . . . .
-1| . . 1 . . 1 . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Rooks
-8| 1 . . . . . . 1
-7| . . . . . . . . 
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| . . . . . . . .
-1| 1 . . . . . . 1
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Queens
-8| . . . 1 . . . .
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| . . . . . . . .
-1| . . . 1 . . . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Kings
-8| . . . . 1 . . .
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| . . . . . . . .
-1| . . . . 1 . . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Fen: rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1
-go perft 1
-a2a3: 1
-a2a4: 1
-b2b3: 1
-b2b4: 1
-c2c3: 1
-c2c4: 1
-d2d3: 1
-d2d4: 1
-e2e3: 1
-e2e4: 1
-f2f3: 1
-f2f4: 1
-g2g3: 1
-g2g4: 1
-h2h3: 1
-h2h4: 1
-b1a3: 1
-b1c3: 1
-g1f3: 1
-g1h3: 1
-
-Nodes searched: 20
-Nodes Per Second: 10000
-d
-8| r n b q k b n r 
-7| p p p p p p p p
-6| . . . . . . . .
-5| . . . . . . . .
-4| X X X X X X X X
-3| X X X X X X X X
-2| P P P P P P P P
-1| R N B Q K B N R
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-White Pieces
-8| . . . . . . . .
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| 1 1 1 1 1 1 1 1
-3| 1 1 1 1 1 1 1 1
-2| 1 1 1 1 1 1 1 1
-1| 1 1 1 1 1 1 1 1
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Black Pieces
-8| 1 1 1 1 1 1 1 1
-7| 1 1 1 1 1 1 1 1
-6| . . . . . . . .
-5| . . . . . . . .
-4| 1 1 1 1 1 1 1 1
-3| 1 1 1 1 1 1 1 1
-2| . . . . . . . .
-1| . . . . . . . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Pawns
-8| . . . . . . . .
-7| 1 1 1 1 1 1 1 1
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| 1 1 1 1 1 1 1 1
-1| . . . . . . . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Knights
-8| . 1 . . . . 1 .
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . . 
-2| . . . . . . . .
-1| . 1 . . . . 1 .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Bishops
-8| . . 1 . . 1 . .
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| . . . . . . . .
-1| . . 1 . . 1 . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Rooks
-8| 1 . . . . . . 1
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| . . . . . . . .
-1| 1 . . . . . . 1
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Queens
-8| . . . 1 . . . .
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| . . . . . . . .
-1| . . . 1 . . . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Kings
-8| . . . . 1 . . .
-7| . . . . . . . .
-6| . . . . . . . .
-5| . . . . . . . .
-4| . . . . . . . .
-3| . . . . . . . .
-2| . . . . . . . .
-1| . . . . 1 . . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Fen: rnbqkbnr/pppppppp/8/8/XXXXXXXX/XXXXXXXX/PPPPPPPP/RNBQKBNR w KQkq - 0 1
-
-empty pieces are determined by ~getAllPieces and my current place piece and remove Piece agenda places piece in both nWhite and nBlack sides 
-It works correctly for the piece's sides tho 
-
-** what this tells me is that regular moves have residue, and don't get cleaned up correctly 
-
-I KNOW WHAT'S HAPPENING: 
-if captured piece is empty (0), it's still accessing it's board->pieces[piece] bitboard (white sides bitboard), this is causing extra ghost pieces 
