--- a/TODO.txt
+++ b/TODO.txt
@@ -1,28 +1,17 @@
-
-In cases like this, there are legal moves for the black king that are detected by perft but not by searching; maybe a mismatch with the searching logic 
-
-PROBLEM: when doing alpha beta in positions close to check, the score is never > bestScore idk why but this cause bestmove to be 0000. Will figure out. maybe adding checks for if the game is over in getBestMove and alpha beta will help with stopping searches early and giving a score. *** Walk through the recursive steps for this currect position to make sure everything is working how it should. ***, *** also could just make a check in get best move that says, if the best score is still -inf by the end of the loop and you have legal moves, pick the first legal move, is a bandaid but works for rn 
-
-** after building, this build is super slow on lichess 
- 
-position startpos moves b1a3 b8c6 g1f3 d7d5 a3b5 e7e5 e2e3 a7a5 b5c3 d5d4 e3d4 e5d4 f1b5 d4c3 d2c3 f8d6 b5c6 b7c6 c1g5 g8f6 d1e2 c8e6 e1c1 h7h6 g5h4 a8c8 h1e1 h8f8 e2a6 c6c5 h4f6 g7f6 d1d6 c7d6 a6b5 d8d7 b5a5 d7b7 a5a4 e8d8 a4f4 d8e7 f4h6 b7d5 c3c4 d5c4 f3h4 c4a2 h4f5 e7d7 h6f6 a2a1 c1d2 a1a5 c2c3 a5d8 e1e6 f7e6 f6g6 f8f5 d2e2 d8h8 g2g4 h8e5 e2f1 e5e1 f1e1 f5e5 e1f1 e5e1 f1e1 c5c4 g6f7 d7c6 f7e6 c8a8 e6c4 c6d7 c4f7 d7c6 f7f3 d6d5 f3f6 c6c5 e1d2 c5c4 f6c6 c4b3 c6b7 b3a2 b7d5 a2a1 d5a8
-d
-8| Q . . . . . . . 
-7| . . . . . . . . 
-6| . . . . . . . . 
-5| . . . . . . . . 
-4| . . . . . . P . 
-3| . . P . . . . . 
-2| . P . K . P . P 
-1| k . . . . . . .
-   _ _ _ _ _ _ _ _
-   a b c d e f g h
-Fen: Q7/8/8/8/6P1/2P5/1P1K1P1P/k7 b - - 0 47
-go perft 1
-a1b1: 1
-a1b2: 1
-
-Nodes searched: 2
-Nodes Per Second: 0
-go 
-bestmove 0000
+things to add later :
+Additional Improvements to Consider
+1. Three-fold Repetition Detection
+You'll need to add position hashing (Zobrist hashing) to detect repeated positions:
+c// Pseudo-code
+if (positionRepeatedThreeTimes(board)) {
+    return DRAW_SCORE;
+}
+2. Insufficient Material
+Detect positions where neither side can mate (e.g., K vs K, K+B vs K):
+cif (hasInsufficientMaterial(board)) {
+    return DRAW_SCORE;
+}
+3. Better Mate Distance Handling
+When you get a mate score from a child node, you might want to verify it's actually a mate:
+c// Check if score is a mate score
+#define IS_MATE_SCORE(score) (abs(score) > MATE_SCORE - 1000)
