Simplify README description
Removed redundant wording for clarity.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Goopis is an optimized, bitboard-based chess engine that was written in C. 
+Goopis is an optimized, bitboard-based chess engine written in C. 
 
 You can challenge and play against the bot here: https://lichess.org/@/Goopis
 
