Fix capitalization in README acknowledgments
Correct capitalization of names in the thanks section.

--- a/README
+++ b/README
@@ -7,8 +7,8 @@ Each version of the engine, as well as its rankings against one another, can be 
 
 thanks to:
 chessprogramming.org
-analog hors 
-sebastian league
+Analog Hors 
+Sebastian Lague
 Tord Romstad
 Arena Chess
 Bruce Moreland
